--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>lists-and-details</title>
+    <link
+      href="https://blogfonts.com/css/aWQ9MjYzODYmc3ViPTM4NiZjPWEmdHRmPUFSTk9SR19fLlRURiZuPWFybm9sZC0yMQ/Arnold 2.1.ttf"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="./App.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>lists-and-details</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
